--- a/index.html
+++ b/index.html
@@ -16,4 +16,9 @@
    <tr>
     <th>UserName</th>
     <th>Full Name</th>
-    <th>IP Address
+    <th>Password</th>
+    <th>IP Address</th>
+   </tr>
+  </table>
+ </body>
+</html>
